# flax_neural_examples

./: Makefile  README.md  pyproject.toml
notebooks/: linear_regression.ipynb  logistic_regression.ipynb
