[project]
name = "flax-neural-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=24.10.0",
    "flax[all]>=0.10.1",
    "jax[cuda12]>=0.4.35",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab>=4.3.0",
    "mypy>=1.13.0",
    "ruff>=0.7.4",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
    "treescope>=0.1.5",
    "isort>=5.13.2",
]
